settings: Fix modal out of screen on mobile.
For the email and full name modals we simply change width to max-width.

The password modal used a flex-row class for no apparent reason,
the class wasn't used anywhere else and removing it fixes the UI bug.

Fixes #15311.

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -111,11 +111,11 @@ h3 .fa-question-circle-o {
 }
 
 #change_email_modal {
-    width: 460px;
+    max-width: 460px;
 }
 
 #change_full_name_modal {
-    width: 480px;
+    max-width: 480px;
 }
 
 .admin-realm-description {
